--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="key_saved">Key Saved</string>
     <string name="frequencyChanged">Frequency changed to:</string>
     <string name="seconds">seconds</string>
+    <string name="category_name">Category name</string>
+    <string name="categoryNameChanged">"Category changed to:"</string>
+    <string name="select_category">Select category</string>
 </resources>
